--- a/test/test/MDK-ARM/test.uvprojx
+++ b/test/test/MDK-ARM/test.uvprojx
@@ -332,7 +332,7 @@
               <MiscControls>--C99</MiscControls>
               <Define>USE_HAL_DRIVER,STM32F042x6</Define>
               <Undefine />
-              <IncludePath>../Inc;      ../Drivers/STM32F0xx_HAL_Driver/Inc;      ../Drivers/STM32F0xx_HAL_Driver/Inc/Legacy;      ../Middlewares/ST/STM32_USB_Device_Library/Core/Inc;      ../Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc;      ../Drivers/CMSIS/Device/ST/STM32F0xx/Include;      ../Drivers/CMSIS/Include;  ../Middlewares/Third_Party/FreeRTOS/Source/portable/RVDS/ARM_CM0;  ../Middlewares/Third_Party/FreeRTOS/Source/include;  ../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS</IncludePath>
+              <IncludePath>../Inc;                ../Drivers/STM32F0xx_HAL_Driver/Inc;                ../Drivers/STM32F0xx_HAL_Driver/Inc/Legacy;                ../Middlewares/ST/STM32_USB_Device_Library/Core/Inc;                ../Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc;                ../Drivers/CMSIS/Device/ST/STM32F0xx/Include;                ../Drivers/CMSIS/Include;            ../Middlewares/Third_Party/FreeRTOS/Source/portable/RVDS/ARM_CM0;            ../Middlewares/Third_Party/FreeRTOS/Source/include;            ../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -535,7 +535,6 @@
               <FileType>1</FileType>
               <FilePath>../Src/usbd_cdc_if.c</FilePath>
             </File>
-            
             <File>
               <FileName>spi.c</FileName>
               <FileType>1</FileType>
@@ -555,6 +554,11 @@
               <FileName>freertos.c</FileName>
               <FileType>1</FileType>
               <FilePath>../Src/freertos.c</FilePath>
+            </File>
+            <File>
+              <FileName>tim.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>../Src/tim.c</FilePath>
             </File>
           </Files>
         </Group>
